--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
   </div>
 
   <marquee class="marquee-bawah" scrollamount="45">
-    KITA USAHAKAN ASIK TAPI TIDAK BERISIK, NAKAL TAPI PAKE AKAL, BEBAS TAPI TAU BATAS #AREAPOJOK #A2ANTIGEDOR #JANGANLUPATERBANG 🛩️🛩️🛩️
+    KITA USAHAKAN ASIK TAPI TIDAK BERISIK, NAKAL TAPI PAKE AKAL, BEBAS TAPI TAU BATAS #AREAPOJOK #TIMINTI #JANGANLUPATERBANG 🛩️🛩️🛩️
   </marquee>
 
 </body>
