--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
   <div class="konten">
 
     <div class="foto-area">
-      <img src="well 1.jpg" alt="Foto Profil">
+      <img src="metal.jpg" alt="Foto Profil">
 
       <div class="foto-info">
         <h3>Dua Kata</h3>
